fix(bug): handles changes for alignments, makes modal alignment proper.

--- a/src/app/add-dependency/add-dependency.component.less
+++ b/src/app/add-dependency/add-dependency.component.less
@@ -84,6 +84,8 @@
                     }
                 }
                 .browse {
+                    display: flex;
+                    align-items: center;
                     font-size:12px;
                     color:#0088ce;
                     cursor:pointer;
